--- a/index.html
+++ b/index.html
@@ -236,6 +236,47 @@
         font-size: 16px;
       }
     }
+/* --- ESTILOS DEL MODAL --- */
+.modal {
+  display: none; /* Oculto por defecto */
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background: rgba(0, 0, 0, 0.8);
+  justify-content: center;
+  align-items: center;
+  z-index: 999;
+}
+
+.modal.active {
+  display: flex; /* Solo se muestra cuando se activa */
+}
+
+.modal iframe {
+  width: 80%;
+  height: 80%;
+  border: none;
+  border-radius: 10px;
+  background: white;
+}
+
+.close-button {
+  position: absolute;
+  top: 30px;
+  right: 40px;
+  font-size: 40px;
+  color: white;
+  background: transparent;
+  border: none;
+  cursor: pointer;
+  transition: transform 0.2s ease;
+}
+
+.close-button:hover {
+  transform: scale(1.2);
+}
 
   </style>
 </head>
