--- a/index.html
+++ b/index.html
@@ -197,6 +197,7 @@
       .carousel-container {
         width: 90%;
         height: 300px;
+        margin-top: 60px;     /* 👈 añade esto */
         margin-bottom: 100px;
       }
 
