--- a/index.html
+++ b/index.html
@@ -199,6 +199,8 @@
         height: 300px;
         margin-top: 60px;     /* 👈 añade esto */
         margin-bottom: 100px;
+        transform: translateX(10px);
+
       }
 
       .book {
